--- a/index.html
+++ b/index.html
@@ -25,7 +25,39 @@
     <title>Plant Tracker</title>
 </head>
 
-<body>
+<body class="max-w-lg mx-auto min-h-screen bg-gray-200 border-4 border-white p-4">
+    <header>
+        <!-- logo -->
+        <h1 class="text-3xl font-bold text-green-600">Plant Tracker</h1>
+
+        <!-- status -->
+        <div class="mt-5 grid grid-cols-3 gap-4">
+            <div class="bg-gray-600 text-white rounded cursor-pointer-xl px-5 py-2">
+                <h2 class="font-bold text-2xl">0</h2>
+                <h4 class="text-xl">Total</h4>
+            </div>
+            <div class="bg-green-600 text-white rounded cursor-pointer-xl px-5 py-2">
+                <h2 class="font-bold text-2xl">0</h2>
+                <h4 class="text-xl">Thriving</h4>
+            </div>
+            <div class="bg-red-400 text-white rounded cursor-pointer-xl px-5 py-2">
+                <h2 class="font-bold text-2xl">0</h2>
+                <h4 class="text-xl">Straggling</h4>
+            </div>
+        </div>
+    </header>
+
+    <main class="mt-10">
+        <!-- filter section -->
+        <div class="flex justify-between items-center">
+            <h1 class="text-xl font-bold">Section Title</h1>
+            <div class="space-x-2">
+                <button class="bg-black text-white px-4 py-1 rounded cursor-pointer">All</button>
+                <button class="bg-black text-white px-4 py-1 rounded cursor-pointer">Thriving</button>
+                <button class="bg-black text-white px-4 py-1 rounded cursor-pointer">Straggling</button>
+            </div>
+        </div>
+    </main>
     <script src="./script.js"></script>
 </body>
 
