remove data if already in other array and fix issue of status and show image dynamically

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
         <!-- status -->
         <div class="mt-5 grid grid-cols-3 gap-4">
-            <div class="bg-gray-600 text-white rounded cursor-pointer-xl px-5 py-2">
+            <div class="bg-gray-600 text-white rounded cursor-pointer-xl px-5 py-2 shadow-2xl">
                 <h2 id="total-count" class="font-bold text-2xl">0</h2>
                 <h4 class="text-xl">Total</h4>
             </div>
-            <div class="bg-green-600 text-white rounded cursor-pointer-xl px-5 py-2">
+            <div class="bg-green-600 text-white rounded cursor-pointer-xl px-5 py-2 shadow-2xl">
                 <h2 id="thriving-count" class="font-bold text-2xl">0</h2>
                 <h4 class="text-xl">Thriving</h4>
             </div>
-            <div class="bg-red-400 text-white rounded cursor-pointer-xl px-5 py-2">
+            <div class="bg-red-400 text-white rounded cursor-pointer-xl px-5 py-2 shadow-2xl">
                 <h2 id="straggling-count" class="font-bold text-2xl">0</h2>
                 <h4 class="text-xl">Straggling</h4>
             </div>
@@ -84,7 +84,7 @@
                     </p>
 
                     <p class="text-neutral-500">
-                        Plantation Date: <span id="plantation-date">12 Jan 2026</span>
+                        Plantation Date: <span id="plantation-date">11 June 2019</span>
                     </p>
                 </div>
 
@@ -121,7 +121,7 @@
                     </p>
 
                     <p class="text-neutral-500">
-                        Plantation Date: <span id="plantation-date">12 Jan 2026</span>
+                        Plantation Date: <span id="plantation-date">9 Feb 2026</span>
                     </p>
                 </div>
 
@@ -158,7 +158,7 @@
                     </p>
 
                     <p class="text-neutral-500">
-                        Plantation Date: <span id="plantation-date">12 Jan 2026</span>
+                        Plantation Date: <span id="plantation-date">8 Oct 2025</span>
                     </p>
                 </div>
 
