--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="shortcut icon" href="./assests/favicon.png" type="image/x-icon">
+
     <style>
         * {
             font-family: "Outfit", sans-serif;
             font-style: normal;
         }
     </style>
-    <title>Plant Tracker</title>
+    <title>Plant Tracker | Home</title>
 </head>
 
 <body class="max-w-lg mx-auto min-h-screen bg-gray-200 border-4 border-dashed border-white p-4">
